--- a/Html/Areas/areas.html
+++ b/Html/Areas/areas.html
@@ -1,66 +1,74 @@
 <main class="Tienda">
-    <div class="imagen">
-        <img src="https://images.pexels.com/photos/1149601/pexels-photo-1149601.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="producto">
-        <div class="container">
-            <div class="texto">
-                <p class="areastxt">Matematicas</p>
+        <a href="Html/Areas/Matematicas/matematicas.html" class="imagen Matematicas">
+            <img src="https://images.pexels.com/photos/1149601/pexels-photo-1149601.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="producto">
+            <div class="container">
+                <div class="texto">
+                    <p class="areastxt">Matematicas</p>
             </div>
         </div>
+        </a>
     </div>
-    <div class="imagen">
+    <a href="Html/Areas/Politica/Politica.html" class="imagen Politica">
         <img src="https://images.pexels.com/photos/1149601/pexels-photo-1149601.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="producto">
         <div class="container">
             <div class="texto">
                 <p class="areastxt">Politica</p>
             </div>
         </div>
+    </a>
     </div>
-    <div class="imagen">
+    <a href="Html/Areas/Arte/Arte.html" class="imagen Arte">
         <img src="https://images.pexels.com/photos/1149601/pexels-photo-1149601.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="producto">
         <div class="container">
             <div class="texto">
                 <p class="areastxt">Arte</p>
             </div>
         </div>
+    </a>
     </div>
-    <div class="imagen">
+    <a href="Html/Areas/Quimica/Quimica.html" class="imagen Quimica">
         <img src="https://images.pexels.com/photos/1149601/pexels-photo-1149601.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="producto">
         <div class="container">
             <div class="texto">
                 <p class="areastxt">Quimica</p>
             </div>
         </div>
+    </a>
     </div>
-    <div class="imagen">
+    <a href="Html/Areas/Lectura/Lectura.html" class="imagen Lectura">
         <img src="https://images.pexels.com/photos/1149601/pexels-photo-1149601.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="producto">
         <div class="container">
             <div class="texto">
                 <p class="areastxt">Lectura</p>
             </div>
         </div>
+    </a>
     </div>
-    <div class="imagen">
+    <a href="Html/Areas/Etica/Etica.html" class="imagen Etica">
         <img src="https://images.pexels.com/photos/1149601/pexels-photo-1149601.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="producto">
         <div class="container">
             <div class="texto">
                 <p class="areastxt">Etica</p>
             </div>
         </div>
+    </a>
     </div>
-    <div class="imagen">
+    <a href="Html/Areas/Religion/Religion.html" class="imagen Religion">
         <img src="https://images.pexels.com/photos/1149601/pexels-photo-1149601.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="producto">
         <div class="container">
             <div class="texto">
                 <p class="areastxt">Religion</p>
             </div>
         </div>
+    </a>
     </div>
-    <div class="imagen">
+    <a href="Html/Areas/Informatica/Informatica.html" class="imagen Informatica">
         <img src="https://images.pexels.com/photos/1149601/pexels-photo-1149601.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="producto">
         <div class="container">
             <div class="texto">
                 <p class="areastxt">Informatica</p>
             </div>
         </div>
+    </a>
     </div>
 </main>
