--- a/Html/navbar.html
+++ b/Html/navbar.html
@@ -1,6 +1,7 @@
 <nav>
     <a href="#Inicio">🏚️ Inicio</a>
-    <a href="#categorias">📂 Categorías</a>
+    <a href="#Chatbox">🤖 Chatbox</a>
+    <a href="#Ranking">🏆 Ranking</a>
     <a href="#examen">📝 Examen</a>
     <a href="#juegos">🕹️ Juegos</a>
     <a href="#iniciar-sesion">👤 Iniciar sesión</a>
