Diseño Nuevo Areas 11/11/24

--- a/Html/navbar.html
+++ b/Html/navbar.html
@@ -1,4 +1,5 @@
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../Css/Banner.css">
 </head>
 <body>
@@ -7,7 +8,6 @@
     <div class="link-container">
     <a href="#Inicio">
         <img src="/ApruebaTuConocimiento/Assets/Iconos/Barra_Navegacion/InicioBottom.png" alt="Icono de Inicio" style="margin-right: 20px;">Inicio</a>
-
     <a href="#Ranking">
         <img src="/ApruebaTuConocimiento/Assets/Iconos/Barra_Navegacion/Trofeo.png" alt="Icono de Ranking" style="margin-right: 20px;">Ranking</a>
     <a href="#examen">
