--- a/Html/Areas/areas.html
+++ b/Html/Areas/areas.html
@@ -1,3 +1,6 @@
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <main class="Tienda">
     <a href="Html/Areas/Matematicas/matematicas.html" class="imagen Matematicas">
         <div class="background Matematicas-bg"></div>
