Contenido Areas:Valencia-11/11/24

--- a/Html/Areas/Politica/Politica.html
+++ b/Html/Areas/Politica/Politica.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Politica</title>
+    <title>Política</title>
     <link rel="stylesheet" href="./pltc.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,15 +32,15 @@
                     <a href="/ApruebaTuConocimiento/Html/Areas/Quimica/Quimica.html">
                         <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/quimica.png" alt="Quimica"class="nav-icon">Química</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Informatica/Informatica.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/informatica.png" alt="Informatica"class="nav-icon">Informatica</a>
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/informatica.png" alt="Informatica"class="nav-icon">Informática</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Religion/Religion.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/religion.png" alt="Religion"class="nav-icon">Religion</a>
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/religion.png" alt="Religion"class="nav-icon">Religión</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Arte/Arte.html">
                         <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/arte.png" alt="Arte"class="nav-icon">Arte</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Matematicas/matematicas.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/matematicas.png" alt="Matematicas"class="nav-icon">Matematicas</a>
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/matematicas.png" alt="Matemáticas"class="nav-icon">Matemáticas</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Etica/Etica.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/etica.png" alt="Etica"class="nav-icon">Etica</a>
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/etica.png" alt="Ética"class="nav-icon">Ética</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Lectura/Lectura.html">
                         <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/lectura.png" alt="Lectura"class="nav-icon">Lectura</a>
                 </div>
@@ -59,7 +59,44 @@
     </nav>
 
     <main>
-        <h1>BIENVENIDOS AL AREA DE POLITICA</h1>
+        <h1>BIENVENIDOS AL ÁREA DE POLÍTICA</h1>
+        
+        <!-- Descripción -->
+        <section id="descripcion">
+            <h2>¿Qué es la Política?</h2>
+            <p>La política es el conjunto de actividades, conductas, relaciones e instituciones relacionadas con la toma de decisiones en una sociedad. En este ámbito se estudian los sistemas de gobierno, el ejercicio del poder, y la interacción entre las diferentes entidades del Estado.</p>
+        </section>
+
+        <!-- Temas y Subtemas -->
+        <section id="temas">
+            <h2>Temas</h2>
+            <ul>
+                <li>
+                    <a href="#">Teoría Política</a>
+                    <ul>
+                        <li><a href="#">Democracia</a></li>
+                        <li><a href="#">Autoritarismo</a></li>
+                        <li><a href="#">Anarquismo</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Política Internacional</a>
+                    <ul>
+                        <li><a href="#">Relaciones Internacionales</a></li>
+                        <li><a href="#">Conflictos Globales</a></li>
+                        <li><a href="#">Organismos Internacionales</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Gobernanza</a>
+                    <ul>
+                        <li><a href="#">Sistemas de Gobierno</a></li>
+                        <li><a href="#">El Estado de Derecho</a></li>
+                        <li><a href="#">Justicia y Derecho</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
