--- a/Html/Areas/Quimica/Quimica.html
+++ b/Html/Areas/Quimica/Quimica.html
@@ -1,26 +1,13 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quimica</title>
+    <title>Química</title>
     <link rel="stylesheet" href="./qmc.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: "Montserrat", sans-serif;
-            font-optical-sizing: auto;
-            font-weight: 800;
-            font-style: normal;
-            margin: 0;
-        }
-        .nav-icon {
-            width: 32px; 
-            height: 32px; 
-            margin-right: 10px; 
-        }
-    </style>
 </head>
 <body>
     <nav class="navbar">
@@ -41,7 +28,7 @@
                         <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/etica.png" alt="Etica"class="nav-icon">Etica</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Lectura/Lectura.html">
                         <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/lectura.png" alt="Lectura"class="nav-icon">Lectura</a>
-			        <a href="/ApruebaTuConocimiento/Html/Areas/Politica/Politica.html">
+                    <a href="/ApruebaTuConocimiento/Html/Areas/Politica/Politica.html">
                         <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/politica.png" alt="Politica"class="nav-icon">Politica</a>
                 </div>
             </li>
@@ -59,7 +46,50 @@
     </nav>
 
     <main>
-        <h1>BIENVENIDOS AL AREA DE QUIMICA</h1>
+        <div class="content">
+            <h1>Bienvenidos al Área de Química</h1>
+            <p class="descripcion">
+                La Química es una ciencia que estudia la composición, estructura, propiedades y transformaciones de la materia. 
+                Es fundamental para entender los procesos que ocurren en el mundo natural y en diversas áreas aplicadas como 
+                la medicina, la ingeniería, la biología y la tecnología. En esta área aprenderás conceptos clave como la 
+                estructura atómica, las reacciones químicas y la tabla periódica.
+            </p>
+
+            <div class="subtopics">
+                <h2>Temas y Subtemas de Química</h2>
+                <ul>
+                    <li class="dropdown">
+                        <a href="#">Átomos y Elementos</a>
+                        <div class="dropdown-content">
+                            <a href="#">Estructura Atómica</a>
+                            <a href="#">Propiedades de los Elementos</a>
+                            <a href="#">Modelo Atómico</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">Reacciones Químicas</a>
+                        <div class="dropdown-content">
+                            <a href="#">Tipos de Reacciones</a>
+                            <a href="#">Ley de Conservación de la Masa</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">Tabla Periódica</a>
+                        <div class="dropdown-content">
+                            <a href="#">Grupos y Períodos</a>
+                            <a href="#">Elementos Químicos</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">Combinación Química</a>
+                        <div class="dropdown-content">
+                            <a href="#">Formación de Compuestos</a>
+                            <a href="#">Balanceo de Ecuaciones</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </main>
 </body>
 </html>
