--- a/Html/Areas/Arte/Arte.html
+++ b/Html/Areas/Arte/Arte.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -7,20 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: "Montserrat", sans-serif;
-            font-optical-sizing: auto;
-            font-weight: 800;
-            font-style: normal;
-            margin: 0;
-        }
-        .nav-icon {
-            width: 32px; 
-            height: 32px; 
-            margin-right: 10px; 
-        }
-    </style>
 </head>
 <body>
     <nav class="navbar">
@@ -30,36 +17,68 @@
                     <img src="/ApruebaTuConocimiento/Assets/Iconos/sombrero-de-graduacion.png" alt="Icono de Áreas" class="nav-icon">Áreas</a>
                 <div class="dropdown-content">
                     <a href="/ApruebaTuConocimiento/Html/Areas/Quimica/Quimica.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/quimica.png" alt="Quimica"class="nav-icon">Química</a>
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/quimica.png" alt="Quimica" class="nav-icon">Química</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Informatica/Informatica.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/informatica.png" alt="Informatica"class="nav-icon">Informatica</a>
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/informatica.png" alt="Informática" class="nav-icon">Informática</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Religion/Religion.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/religion.png" alt="Religion"class="nav-icon">Religion</a>
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/religion.png" alt="Religión" class="nav-icon">Religión</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Matematicas/matematicas.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/matematicas.png" alt="Matematicas"class="nav-icon">Matematicas</a>
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/matematicas.png" alt="Matemáticas" class="nav-icon">Matemáticas</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Etica/Etica.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/etica.png" alt="Etica"class="nav-icon">Etica</a>
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/etica.png" alt="Ética" class="nav-icon">Ética</a>
                     <a href="/ApruebaTuConocimiento/Html/Areas/Lectura/Lectura.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/lectura.png" alt="Lectura"class="nav-icon">Lectura</a>
-			        <a href="/ApruebaTuConocimiento/Html/Areas/Politica/Politica.html">
-                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/politica.png" alt="Politica"class="nav-icon">Politica</a>
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/lectura.png" alt="Lectura" class="nav-icon">Lectura</a>
+                    <a href="/ApruebaTuConocimiento/Html/Areas/Politica/Politica.html">
+                        <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/politica.png" alt="Política" class="nav-icon">Política</a>
                 </div>
             </li>
-            <div class="right-links">
-                <li><a href="/ApruebaTuConocimiento/index.php">
-                    <img src="/ApruebaTuConocimiento/Assets/Iconos/Barra_Navegacion/InicioBottom.png" alt="Icono de Inicio" style="margin-right: 20px;">Inicio</a></li>
-                <li><a href="/Html/Navbar/Juegos/juegos.html">
-                    <img src="/ApruebaTuConocimiento/Assets/Iconos/Barra_Navegacion/Mando.png"alt="Icono de Juegos" 
-                    style="margin-right: 20px;">Juegos</a></li>
-                <li><a href="/Html/Navbar/Examen/examen.html">
-                    <img src="/ApruebaTuConocimiento/Assets/Iconos/Barra_Navegacion/Examen.png"alt="Icono de Examen" 
-                    style="margin-right: 20px;">Exámenes</a></li>    
-            </div>
         </ul>
     </nav>
 
     <main>
-        <h1>BIENVENIDOS AL AREA DE ARTE</h1>
+        <h1>BIENVENIDOS AL ÁREA DE ARTE</h1>
+
+        <!-- Descripción del área de Arte -->
+        <section id="descripcion">
+            <h2>Descripción del Área</h2>
+            <p>El área de Arte tiene como objetivo el estudio y la práctica de distintas formas de expresión creativa. Se exploran técnicas en pintura, escultura, música, danza y más, promoviendo la apreciación artística y el desarrollo de habilidades creativas.</p>
+        </section>
+
+        <!-- Estructura de temas y subtemas -->
+        <section id="temas">
+            <h2>Temas y Subtemas</h2>
+            <ul>
+                <li>
+                    Pintura
+                    <ul>
+                        <li>Óleos</li>
+                        <li>Acuarelas</li>
+                        <li>Frescos</li>
+                    </ul>
+                </li>
+                <li>
+                    Escultura
+                    <ul>
+                        <li>Escultura en piedra</li>
+                        <li>Escultura en bronce</li>
+                    </ul>
+                </li>
+                <li>
+                    Música
+                    <ul>
+                        <li>Composición musical</li>
+                        <li>Instrumentos musicales</li>
+                    </ul>
+                </li>
+                <li>
+                    Danza
+                    <ul>
+                        <li>Ballet</li>
+                        <li>Danze contemporánea</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
