Errores en materias arreglados 11/11/24-10:25Pm

--- a/Html/Areas/Etica/Etica.html
+++ b/Html/Areas/Etica/Etica.html
@@ -27,7 +27,6 @@
 <body>
     <nav class="navbar">
         <ul class="nav-links">
-            <!-- Menú de áreas con desplegable -->
             <li class="dropdown">
                 <a href="#" class="dropbtn">
                     <img src="/ApruebaTuConocimiento/Assets/Iconos/sombrero-de-graduacion.png" alt="Icono de Áreas" class="nav-icon">Áreas</a>
@@ -48,6 +47,8 @@
                         <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/lectura.png" alt="Lectura" class="nav-icon">Lectura</a>
                 </div>
             </li>
+        </ul>
+            <div class="right-links">
                 <li><a href="/ApruebaTuConocimiento/index.php">
                     <img src="/ApruebaTuConocimiento/Assets/Iconos/Barra_Navegacion/InicioBottom.png" alt="Icono de Inicio" class="nav-icon">Inicio</a></li>
                 <li><a href="/Html/Navbar/Juegos/juegos.html">
@@ -55,9 +56,7 @@
                 <li><a href="/Html/Navbar/Examen/examen.html">
                     <img src="/ApruebaTuConocimiento/Assets/Iconos/Barra_Navegacion/Examen.png" alt="Icono de Examen" class="nav-icon">Exámenes</a></li>
             </div>
-        </ul>
     </nav>
-
     <main>
         <h1>BIENVENIDOS AL ÁREA DE ÉTICA</h1>
         <section id="descripcion">
