--- a/Html/Areas/Arte/Arte.html
+++ b/Html/Areas/Arte/Arte.html
@@ -8,12 +8,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #1C1C1E;
+            background-image: url('https://wallpapers.com/images/hd/fondonegro-abstracto-en-4k-4kjbhsuu5ezb6u30.jpg');
+            background-size: cover; 
+            background-position: center; 
+            background-repeat: no-repeat; 
+
+            font-family: 'Montserrat', sans-serif; 
+            font-optical-sizing: auto;
+            font-weight: 800;
+            font-style: normal;
+            margin: 0;
+            background-color: #1C1C1E;
+            color: white;
+        }
+        .nav-icon {
+            width: 32px; 
+            height: 32px; 
+            margin-right: 10px; 
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar">
         <ul class="nav-links">
             <li class="dropdown">
-                <a href="" class="dropbtn">
+                <a href="#" class="dropbtn">
                     <img src="/ApruebaTuConocimiento/Assets/Iconos/sombrero-de-graduacion.png" alt="Icono de Áreas" class="nav-icon">Áreas</a>
                 <div class="dropdown-content">
                     <a href="/ApruebaTuConocimiento/Html/Areas/Quimica/Quimica.html">
@@ -32,13 +54,19 @@
                         <img src="/ApruebaTuConocimiento/Assets/Iconos/Areas/politica.png" alt="Política" class="nav-icon">Política</a>
                 </div>
             </li>
-        </ul>
+            <div class="right-links">
+                <li><a href="/ApruebaTuConocimiento/index.php">
+                    <img src="/ApruebaTuConocimiento/Assets/Iconos/Barra_Navegacion/InicioBottom.png" alt="Icono de Inicio" style="margin-right: 20px;">Inicio</a></li>
+                <li><a href="/Html/Navbar/Juegos/juegos.html">
+                    <img src="/ApruebaTuConocimiento/Assets/Iconos/Barra_Navegacion/Mando.png" alt="Icono de Juegos" 
+                    style="margin-right: 20px;">Juegos</a></li>
+                <li><a href="/Html/Navbar/Examen/examen.html">
+                    <img src="/ApruebaTuConocimiento/Assets/Iconos/Barra_Navegacion/Examen.png" alt="Icono de Examen" 
+                    style="margin-right: 20px;">Exámenes</a></li>    
+            </div>
     </nav>
-
     <main>
         <h1>BIENVENIDOS AL ÁREA DE ARTE</h1>
-
-        <!-- Descripción del área de Arte -->
         <section id="descripcion">
             <h2>Descripción del Área</h2>
             <p>El área de Arte tiene como objetivo el estudio y la práctica de distintas formas de expresión creativa. Se exploran técnicas en pintura, escultura, música, danza y más, promoviendo la apreciación artística y el desarrollo de habilidades creativas.</p>
