--- a/Html/Areas/Lectura/Lectura.html
+++ b/Html/Areas/Lectura/Lectura.html
@@ -7,7 +7,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
-   
+   <style>
+        body {
+            font-family: "Montserrat", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 800;
+            font-style: normal;
+            margin: 0;
+            background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20231019/pngtree-vertically-patterned-black-with-textured-finish-image_13664909.png');
+            background-size: cover;
+            background-position: center;
+        }
+        .nav-icon {
+            width: 32px; 
+            height: 32px; 
+            margin-right: 10px; 
+        }
+   </style>
 </head>
 <body>
     <nav class="navbar">
