--- a/Html/Areas/Matematicas/matematicas.html
+++ b/Html/Areas/Matematicas/matematicas.html
@@ -8,6 +8,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #1C1C1E;
+            font-family: "Montserrat", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 800;
+            font-style: normal;
+            margin: 0;
+            background-image: url('https://wallpapers.com/images/hd/fondonegro-en-4k-hipnotizante-huozj0memde22a21.jpg');
+            background-size: cover; 
+            background-position: center; 
+            background-repeat: no-repeat; 
+
+        }
+        .nav-icon {
+            width: 32px; 
+            height: 32px; 
+            margin-right: 10px; 
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar">
